[tool.poetry]
name = "sunglass"
version = "0.1.0"
description = "GUI for easily use Solcore"
authors = ["Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/sunglass"

[tool.poetry.dependencies]
python = "^3.9"
solcore = "^5.7.7"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
