[tool.poetry]
name = "sunglass"
version = "0.1.1"
description = "GUI for easily use Solcore"
authors = ["Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/sunglass"

[tool.poetry.dependencies]
python = "^3.9"
solcore = "^5.7.7"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.0"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
flake8 = "^5.0.4"
mypy = "^0.982"
types-PyYAML = "^6.0.7"
codecov = "^2.1.12"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
